# pleasant

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: coverage.yml  docs.yml  tests.yml
docs/: conf.py  fitting.rst  index.rst  loaders.rst  measurement.rst  util.rst
examples/: demo.ipynb
src/pleasant/: __init__.py  fitting.py  measurement.py  util.py
src/pleasant/loaders/: __init__.py  qudi.py
tests/: test_fitting.py  test_loader_qudi.py  test_measurement.py  test_util.py
tests/data/: scan_fit_data.pkl
tests/test_measurement/: count_rate.npy  exc_freq.npy
