[tool.poetry]
name = "pleasant"
version = "1.0.0"
description = "Routines for post-processing and analyzing PLE experiment data."
authors = ["Kilian Unterguggenberger <kilian.unterguggenberger@hu-berlin.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.24.1"
scipy = "^1.11.2"
matplotlib = "^3.6.3"
pandas = "^2.1.0"
lmfit = "^1.1.0"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.5.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
