[tool.poetry]
name = "pleasant"
version = "1.1.0"
description = "Routines for post-processing and analyzing PLE experiment data."
authors = ["Kilian Unterguggenberger <kilian.unterguggenberger@hu-berlin.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.24.1"
scipy = "^1.11.2"
matplotlib = "^3.6.3"
pandas = "^2.1.0"
lmfit = "^1.1.0"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.5.0"
pytest = "^7.2.0"
coverage = {extras = ["toml"], version = "^7.2.7"}
pytest-cov = "^4.1.0"
pytest-datadir = "^1.4.1"
black = "^23.9.1"
flake8 = "^6.1.0"
flake8-black = "^0.3.6"
flake8-bugbear = "^23.9.16"
flake8-import-order = "^0.18.2"
mypy = "^1.5.1"
pandas-stubs = "^2.0.3.230814"
flake8-annotations = "^3.0.1"
flake8-docstrings = "^1.7.0"
pydoclint = {extras = ["flake8"], version = "^0.3.2"}
sphinx = "^7.2.6"
sphinx-autodoc-typehints = "^1.24.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["pleasant"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
